# AltairOnAzureSphere

./: .gitignore  .gitmodules  AzureSphereRTCoreToolchainEdgeImpulse.cmake  README.md  altair_build_scripts.ps1
AltairHL_emulator/: .clang-format  CMakeLists.txt  altair_config.c  altair_config.h  altair_panel.h  app_exit_codes.h  app_manifest.json  app_manifest.json.avnet.geo_owm_games  app_manifest.json.avnet.no_cloud  app_manifest.json.front_panel_kit  app_manifest.json.front_panel_kit.json  app_manifest.json.seeed  app_manifest.json.seeed.geo_owm_games  app_manifest.json.seeed.no_cloud  cpu_monitor.c  cpu_monitor.h  device_id.c  device_id.h  env_open_weather_map.c  env_open_weather_map.h  environment.c  environment.h  environment_types.h  io_ports.c  io_ports.h  io_ports_old.c  iotc_manager.c  iotc_manager.h  launch.vs.json  location_from_ip.c  main.c  main.h  onboard_sensors.c  onboard_sensors.h  utils.c  utils.h  web_socket_server.c  web_socket_server.h  wifi_config.c  wifi_config.h
AltairHL_emulator/Altair8800/: 88dcdd.c  88dcdd.h
AltairHL_emulator/AppSamples/: avnet.bas  classify.bas  clear.asm  dark.c  esrom.c  gf.c  hal.c  hw.c  loveme.bas  power.c  riddle.c  shakeit.c
AltairHL_emulator/AppSamples/escape/: esrom.c  hal.c  riddle.c  shakeit.c  start.c
AltairHL_emulator/BasicSamples/: AVNET.BAS  DEVGET.C  DISPLAY.C  JSON.BAS  LOVEME.BAS  POWER.C  TIME.BAS  WEBGET.C
AltairHL_emulator/CSamples/: DEVGET.C  ESROM.C  GETFILE.C  SHAKEIT.C  dark.c  esrom.c  getfile.c  gf.c  riddle.c  shakeit.c
AltairHL_emulator/FrontPanels/: front_panel_click.c  front_panel_click.h  front_panel_kit.c  front_panel_kit.h  front_panel_none.c  front_panel_none.h  front_panel_retro_click.c  front_panel_retro_click.h
AltairHL_emulator/PortDrivers/: azure_io.c  file_io.c  onboard_io.c  onboard_io.h  utility_io.c
AltairHL_sd_card_format_drive_a/: CMakeLists.txt  app_manifest.json  launch.vs.json  main.c
AltairHL_sd_card_format_drive_b/: CMakeLists.txt  app_manifest.json  main.c
AltairRT_difference_disk/: CMakeLists.txt  app_manifest.json  intercore.c  launch.vs.json  main.c
AltairRT_disk_cache_server/: intercore.h  launch.vs.json  main.c
AltairRT_filesystem_ext/: CMakeLists.txt  app_manifest.json  main.c
AltairRT_imagepackages/: AltairHL_emulator_seeed_mini.imagepackage  AltairHL_sd_card_format_a.imagepackage  AltairHL_sd_card_format_b.imagepackage  AltairRT_disk_cache_service.imagepackage  AltairRT_filesystem_ext_service.imagepackage  AltairRT_movement_classify.imagepackage  AltairRT_sd_card_service_avnet_rev_1.imagepackage  AltairRT_sd_card_service_avnet_rev_2.imagepackage  emulator_avnet_r1_geo_owm_games.imagepackage  emulator_avnet_r1_geo_owm_games_sd_retro.imagepackage  emulator_avnet_r1_no_cloud.imagepackage  emulator_avnet_r1_no_cloud_sd_retro.imagepackage  emulator_avnet_r2_geo_owm_games.imagepackage  emulator_avnet_r2_geo_owm_games_sd_retro.imagepackage  emulator_avnet_r2_no_cloud.imagepackage  emulator_avnet_r2_no_cloud_sd_retro.imagepackage  emulator_seeed_mdb_geo_owm_games.imagepackage  emulator_seeed_mdb_no_cloud.imagepackage  emulator_seeed_rdb_geo_owm_games.imagepackage  emulator_seeed_rdb_no_cloud.imagepackage
AltairRT_movement_classify/: CMakeLists.txt  app_manifest.json  launch.vs.json  main.cpp
AltairRT_sd_card_service/: CMakeLists.txt  README.MD  app_manifest.json  launch.vs.json  main.c
AltairRT_sd_card_service_cache/: CMakeLists.txt  app_manifest.json  linker.ld  main.c
AltairRT_tiny_ml_classify/: CMakeLists.txt  CMakeSettings.json  app_manifest.json  lsm6dso_driver.c  main.cpp
AltairRT_tiny_ml_classify/model-parameters/: model_metadata.h
Altair_disk_builder/: altair_wifi_config.py
Altair_imagepackages/: AltairHL_sd_card_format_a.imagepackage  AltairHL_sd_card_format_b.imagepackage  AltairRT_difference_disk_service.imagepackage  AltairRT_disk_cache_server.imagepackage  AltairRT_movement_classify.imagepackage  emulator_avnet_r1_geo_owm_games.imagepackage  emulator_avnet_r1_geo_owm_games_sd_retro.imagepackage  emulator_avnet_r1_no_cloud.imagepackage  emulator_avnet_r1_no_cloud_sd_retro.imagepackage  emulator_avnet_r1_sd_retro.imagepackage  emulator_avnet_r2_geo_owm_games.imagepackage  emulator_avnet_r2_geo_owm_games_sd_retro.imagepackage  emulator_avnet_r2_no_cloud.imagepackage  emulator_avnet_r2_no_cloud_sd_retro.imagepackage  emulator_avnet_r2_sd_retro.imagepackage  emulator_seeed_mdb_geo_owm_games.imagepackage  emulator_seeed_mdb_no_cloud.imagepackage  emulator_seeed_rdb_geo_owm_games.imagepackage  emulator_seeed_rdb_no_cloud.imagepackage
Altair_sd_card_image_tools/: altair_wifi_config.py  azsphere_cpm63k.dsk  bdsc-v1.60.dsk  blank.dsk  create_sd_card_from_disks.py  create_sd_card_image_from_disks.py  escape.dsk  extract_disks_from_sd_card.py  extract_disks_from_sd_card_image.py  wifi_eap.yaml  wifi_open.yaml  wifi_psk.yaml
CopyX/: COPY.C  COPYX.C  LOOP.BAS
HardwareDefinitions/avnet_mt3620_sk/: altair.json
HardwareDefinitions/avnet_mt3620_sk/inc/hw/: altair.h
HardwareDefinitions/avnet_mt3620_sk_rev2/: altair.json
HardwareDefinitions/avnet_mt3620_sk_rev2/inc/hw/: altair.h
HardwareDefinitions/mt3620_rdb/: altair.json
HardwareDefinitions/mt3620_rdb/inc/hw/: altair.h
HardwareDefinitions/mt3620_rdb_ethernet/: altair.json
HardwareDefinitions/mt3620_rdb_ethernet/inc/hw/: altair.h
HardwareDefinitions/seeed_mt3620_mdb/: altair.json
HardwareDefinitions/seeed_mt3620_mdb/inc/hw/: altair.h
IntercoreContract/: intercore_contract.h
Terminal/: terminal.html
